# SimulationDriver

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  .travis.yml.old  CMakeLists.txt  README.md  SampleFile.cpp  winConfigureAndBuild.bat
include/sim-driver/: CallbackWrapper.hpp  Camera.hpp  CameraMover.hpp  OpenGLHelper.hpp  OpenGLSimulation.hpp  OpenGLTypes.hpp  SimCallbacks.hpp  SimData.hpp  SimDriver.hpp  WindowManager.hpp
include/sim-driver/meshes/: MeshFunctions.hpp  MeshHelper.hpp
include/sim-driver/renderers/: MeshRenderer.hpp  RendererHelper.hpp
src/: ShaderConfig.hpp.in  imgui_impl_glfw_gl3.cpp
src/exec/: BounceMain.cpp  HeightsMain.cpp  MeshMain.cpp  OptiXMain.cpp  VboTest.cpp  main.cpp  main2.cpp
src/extra/sim-driver/extra/: OptiXCommon.hpp  OptiXScene.cpp  OptiXScene.hpp  OptiXSimulation.cu  OptiXSimulation.hpp
src/extra/sim-driver/extra/optix-programs/: Box.cu  Brdf.cu  Cameras.cu
src/shaders/: heights.geom  heights.vert  shader.frag  shader.geom  shader.vert  shader_mac.frag
src/sim-driver/: CallbackWrapper.hpp  Camera.cpp  Camera.hpp  CameraMover.cpp  CameraMover.hpp  OpenGLForwardDeclarations.hpp  OpenGLHelper.cpp  OpenGLHelper.hpp  OpenGLSimulation.hpp  SimCallbacks.hpp  SimData.hpp  SimDriver.cpp  SimDriver.hpp  WindowManager.cpp  WindowManager.hpp
src/sim-driver/callbacks/: CallbackSingleton.cpp  CallbackSingleton.hpp  CallbackWrapper.hpp  Callbacks.cpp  Callbacks.hpp  CameraCallbacks.hpp
src/sim-driver/cameras/: Camera.cpp  Camera.hpp
src/sim-driver/meshes/: HeightMap.cpp  HeightMap.hpp  MeshFunctions.cpp  MeshHelper.cpp  MeshHelper.hpp  MeshVariant.hpp  SphereMesh.cpp  SphereMesh.hpp
src/sim-driver/renderers/: HeightMapRenderer.cpp  HeightMapRenderer.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Renderer.hpp  RendererHelper.cpp  RendererHelper.hpp  RendererHelper2.hpp
src/testing/: SimulationLoopTests.cpp  TemplateCompilationTests.cpp
src/testing/include_checks/: CallbackWrapperIncludeTest.cpp  CameraIncludeTest.cpp  CameraMoverIncludeTest.cpp  OpenGLHelperIncludeTest.cpp  OpenGLSimulationIncludeTest.cpp  OpenGLTypesIncludeTest.cpp  SimCallbacksIncludeTest.cpp  SimDataIncludeTest.cpp  SimDriverIncludeTest.cpp  WindowManagerIncludeTest.cpp
src/testing/include_checks/meshes/: MeshFunctionsIncludeTest.cpp  MeshHelperIncludeTest.cpp
src/testing/include_checks/renderers/: MeshRendererIncludeTest.cpp  RendererHelperIncludeTest.cpp
